--- a/package.json
+++ b/package.json
@@ -1,12 +1,17 @@
 {
-  "name": "svetlokit",
-  "version": "0.0.1",
-  "scripts": {
-    "bootstrap": "lerna bootstrap",
-    "build": "lerna run build",
-    "publish-release": "lerna publish -m \"chore: Publish %s\" --no-push"
-  },
-  "devDependencies": {
-    "lerna": "^3.22.1"
-  }
+    "name": "svetlokit",
+    "version": "0.0.1",
+    "scripts": {
+        "bootstrap": "lerna bootstrap",
+        "build": "lerna run build",
+        "publish-release": "lerna publish -m \"chore: Publish %s\" --no-push"
+    },
+    "devDependencies": {
+        "@tsconfig/svelte": "^1.0.10",
+        "lerna": "^3.22.1",
+        "svelte": "^3.31.2",
+        "svelte-check": "^1.1.27",
+        "tslib": "^2.1.0",
+        "typescript": "^4.1.3"
+    }
 }
