--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
     "name": "svetlokit",
     "version": "0.0.0",
+    "publishConfig": {
+        "access": "public"
+    },
     "scripts": {
         "bootstrap": "lerna bootstrap",
         "build": "lerna run build",
