--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -5,6 +5,9 @@
     "author": "Sergei Aksenov <aksenovdev@gmail.com>",
     "homepage": "",
     "license": "ISC",
+    "publishConfig": {
+        "access": "public"
+    },
     "dependencies": {
         "@svetlokit/actions": "*",
         "@svetlokit/stores": "*",
