--- a/packages/stores/package.json
+++ b/packages/stores/package.json
@@ -13,6 +13,9 @@
     "files": [
         "lib"
     ],
+    "publishConfig": {
+        "access": "public"
+    },
     "scripts": {
         "build": "tsc",
         "prepublish": "tsc"
