--- a/package.json
+++ b/package.json
@@ -1,9 +1,7 @@
 {
     "name": "svetlokit",
     "version": "0.0.0",
-    "publishConfig": {
-        "access": "public"
-    },
+    "private": true,
     "scripts": {
         "bootstrap": "lerna bootstrap",
         "build": "lerna run build",
